<resources>
    <string name="app_name">SQLHomeTask</string>
    <string name="configuration">Fill Out the Your Important Day</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="changeDate">Change Date</string>
    <string name="currentDate">Current Date</string>
    <string name="editDescription">Edit Description</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit selected day</string>
</resources>
